--- a/math.html
+++ b/math.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
 
+    <button id="addBtn"> GET STRATED !! </button>
+
+
+
+    2+2
     <script src="math.js"></script>
 </body>
 </html>
