--- a/math.html
+++ b/math.html
@@ -9,10 +9,8 @@
 <body>
 
     <button id="addBtn"> GET STRATED !! </button>
+    <alert id="hello"></alert> 
 
-
-
-    2+2
     <script src="math.js"></script>
 </body>
 </html>
