--- a/math.html
+++ b/math.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML CSS Review </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <button id="addBtn"> GET STRATED !! </button>
-    <alert id="hello"></alert> 
-
+    <p>paragraph of <button title="Danger zone">hello</button> text</p> 
+    <button title="Go for this button">heyyy</button>
+    <button class="red" title="Danger Zone" onclick=" alert ('YOUR COMPUTER IS GOING TO CRASH !!!!! ')">A good  news click here</button>
+    <button class="yellow" title="Danger Zone" onclick="alert('YOUR COMPUTER IS GOING TO CRASH !!!!! ')">Click here</button>
     <script src="math.js"></script>
 </body>
 </html>
