--- a/math.html
+++ b/math.html
@@ -10,11 +10,13 @@
 <body>
 
     <!--HTML TOPIC-->
-    <button id="addBtn"> GET STRATED !! </button>
+    <button id="addBtn"> GET STRATED !! </button> 
     <p>paragraph of <button title="Danger zone">hello</button> text</p> 
-    <button title="Go for this button">heyyy</button>
+   <button title="Go for this button">heyyy</button>
     <button class="red" title="Danger Zone" onclick=" alert ('YOUR COMPUTER IS GOING TO CRASH !!!!! ')">A good  news click here</button>
-    <button class="yellow" title="Danger Zone" onclick="alert('YOUR COMPUTER IS GOING TO CRASH !!!!! ')">Click here</button>
-    <script src="math.js"></script>
+   <button class="yellow" title="Danger Zone" onclick="alert('YOUR COMPUTER IS GOING TO CRASH !!!!! ')">Click here</button>
+
+    <script src="math.js">
+    </script>
 </body>
 </html>
