--- a/calculator.html
+++ b/calculator.html
@@ -4,28 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculatoin</title>
+    <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
 
-    <button onclick="
-        calculatoin +='1';
-        console.log(calculatoin);
-        ">1</button>
+
 
     <button onclick="
+    calculatoin = '';
+    console.log(calculatoin);
+    ">C</button>
+
+    <button class="button1-4"onclick="
+    calculatoin += '/';
+    ">/</button>
+
+    <br>
+
+    <button class="button7" onclick="
+    calculatoin +='7';
+    console.log(calculatoin);
+    ">7</button>
+
+    <button class="button8" onclick="
+    calculatoin +='8';
+    console.log(calculatoin);
+    ">8</button>
+
+    <button class="button9" onclick="
+    calculatoin +='9';
+    console.log(calculatoin);
+    ">9</button>
+
+    <button class="button1-1" onclick="
+    calculatoin +=' * ';
+    console.log(calculatoin);
+    ">*</button>
+
+    <br>
+
+    <button class="button4" onclick="
+    calculatoin +='4';
+    console.log(calculatoin);
+    ">4</button>
+
+    <button class="button5" onclick="
+    calculatoin +='5';
+    console.log(calculatoin);
+    ">5</button>
+
+    <button class="button6" onclick="
+    calculatoin +='6';
+    console.log(calculatoin);
+    ">6</button>
+
+    <button class="button1-2" onclick="
+    calculatoin +=' - ';
+    console.log(calculatoin);
+    ">-</button>
+
+    <br>
+
+    <button class="button1" onclick="
+    calculatoin +='2';
+    console.log(calculatoin);
+    ">1</button>
+
+    <button class="button2" onclick="
     calculatoin +='2';
     console.log(calculatoin);
     ">2</button>
 
-    <button onclick="
+    <button class="button3" onclick="
     calculatoin +='3';
     console.log(calculatoin);
     ">3</button>
 
-    <button onclick="
+    <button class="button1-3" onclick="
     calculatoin +=' + ';
     console.log(calculatoin);
     ">+</button>
+
+    <br>
+
+    <button class="button0" onclick="
+    calculatoin +='0';
+    console.log(calculatoin);
+    ">0</button>
+
+    <button onclick="
+    calculatoin +='.';
+    console.log(calculatoin);
+    ">.</button>
 
     <button onclick="
     calculatoin = eval(calculatoin);
