--- a/calculator.html
+++ b/calculator.html
@@ -10,7 +10,7 @@
 
 
 
-    <button onclick="
+    <button class="buttonC" onclick="
     calculatoin = '';
     console.log(calculatoin);
     ">C</button>
@@ -92,15 +92,15 @@
     console.log(calculatoin);
     ">0</button>
 
-    <button onclick="
+    <button class="button1-5"onclick="
     calculatoin +='.';
     console.log(calculatoin);
     ">.</button>
 
-    <button onclick="
+   <button class="button1-6" onclick="
     calculatoin = eval(calculatoin);
     console.log(calculatoin);
-    ">=</button>
+   ">=</button>
 
     <script>
         let calculatoin = '';
