--- a/booleans.html
+++ b/booleans.html
@@ -8,6 +8,7 @@
 <body>
     <script>
 
+        /*
         true
         false
 
@@ -26,6 +27,9 @@
         }else{
             console.log("you cannot drive");
         }
+
+
+
         const age = 15;
         
         if (age > 16){
@@ -36,8 +40,13 @@
         }else{
             console.log("you can not drive");
         }
+            */
 
 
+
+            console.log(true &&  true);
+
+           
 
     </script>
 </body>
