--- a/rock papper scissors.html
+++ b/rock papper scissors.html
@@ -11,23 +11,55 @@
 
     <button onclick="
     const randomNumber = Math.random();
+    let computerMove = '';
+
     if (randomNumber >= 0 && randomNumber <1 /3){
-        console.log('Rock');
+         computerMove = 'Rock';
     }else if (randomNumber >= 1 / 3 && randomNumber < 2 /3){
-         console.log('Papper')
+         computerMove = 'Papper';
     }else if (randomNumber >= 2 / 3 && randomNumber <1){
-        console.log('Scissors');
+         computerMove = 'Scissors';
     }
-        
+        let result = '';
 
-
+        if(computerMove === 'rock'){
+            result = 'Tie';
+        }else if (computerMove === 'papper'){
+            result = 'You lose';
+        }else if (computerMove === 'scissors'){
+            result = 'You win';
+        }
+        alert(`You picked rock. Computer picked $ {computerMove}. ${result}`);
     ">Rock</button>
 
+    <button onclick="
+
+    const randomNumber = Math.random();
+    let computerMove = '';
+    if (randomNumber >= 0 && randomNumber <1 /3){
+        computerMove = 'Rock';
+    }else if (randomNumber >= 1 / 3 && randomNumber <2 /3){
+        computerMove = 'papper';
+    }else if (randomNumber >= 2 / 3 && randomNumber <1){
+        computerMove = 'Scissors';
+    }
+
+    let result ='';
+
+    if (computerMove === 'rock'){
+        result = 'You win';
+    }else if (computerMove === 'papper'){
+        result = 'Tie';
+    }else if (computerMove == 'scissors'){
+        result = 'You lose';
+    }
+    alert(`You picked papper. Computer picked $ {computerMove}. ${result}`);
+
+    ">Papper</button>
 
 
 
 
-    <button>Papper</button>
     <button>Scissors</button>
 
 
