--- a/rock papper scissors.html
+++ b/rock papper scissors.html
@@ -20,7 +20,7 @@
     }else if (randomNumber >= 2 / 3 && randomNumber <1){
          computerMove = 'Scissors';
     }
-        let result = '';
+    let result ='';
 
         if(computerMove === 'rock'){
             result = 'Tie';
@@ -34,33 +34,54 @@
 
     <button onclick="
 
-    const randomNumber = Math.random();
-    let computerMove = '';
-    if (randomNumber >= 0 && randomNumber <1 /3){
-        computerMove = 'Rock';
-    }else if (randomNumber >= 1 / 3 && randomNumber <2 /3){
-        computerMove = 'papper';
-    }else if (randomNumber >= 2 / 3 && randomNumber <1){
-        computerMove = 'Scissors';
+    const randomNumber1 = Math.random();
+    let computerMove1 = '';
+    if (randomNumber1 >= 0 && randomNumber1 <1 /3){
+        computerMove1 = 'Rock';
+    }else if (randomNumber1 >= 1 / 3 && randomNumber1 <2 /3){
+        computerMove1 = 'papper';
+    }else if (randomNumber1 >= 2 / 3 && randomNumber1 <1){
+        computerMove1 = 'Scissors';
     }
 
-    let result ='';
+    let result1 ='';
 
-    if (computerMove === 'rock'){
-        result = 'You win';
-    }else if (computerMove === 'papper'){
-        result = 'Tie';
-    }else if (computerMove == 'scissors'){
-        result = 'You lose';
+    if (computerMove1 === 'rock'){
+        result1 = 'You win';
+    }else if (computerMove1 === 'papper'){
+        result1 = 'Tie';
+    }else if (computerMove1 == 'scissors'){
+        result1 = 'You lose';
     }
     alert(`You picked papper. Computer picked $ {computerMove}. ${result}`);
 
     ">Papper</button>
 
 
+    <button onclick="
+    const randomNumber2 = Math.random();
+    let computerMove2 ='';
+    if(randomNumber2 >= 0 && randomNumber2 <1 /3){
+        computerMove2 ='Rock';
+    }else if(randomNumber2 >= 0 && randomNumber2 <2 /3){
+        computerMove2 = 'Papper';
+    }else if(randomNumber2 >= 0 && randomNumber2 <1){
+        computerMove2 = 'Scissors';
+    }
 
+    let result2 ='';
 
-    <button>Scissors</button>
+    if(computerMove2 === 'rock'){
+        result2 ='You lose';
+    }else if(computerMove2 === 'Scissors'){
+        result2 ='You win';
+    }else if(computerMove2 === 'Papper'){
+        result2 ='Tie';
+    }
+    alert(`You picked papper. Computer picked $ {computerMove}. ${result}`);
+    
+    
+    ">Scissors</button>
 
 
 
