--- a/functions.html
+++ b/functions.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Functions</title>
 </head>
 <body>
-    <h2>hello</h2>
+    <h2>Functions</h2>
+
+    <script>
+
+        function function1() {
+            console.log('hello');
+            console.log(2+2);
+        }
+        function1();
+        function1();
+
+
+
+
+    </script>
 </body>
 </html>
