--- a/rock papper scissors functions.html
+++ b/rock papper scissors functions.html
@@ -6,6 +6,26 @@
     <title>Rock Papper Scissors</title>
 </head>
 <body>
-    <p>Rock Papper Scissors</p>
+    <p>Rock Papper Scissor - Functions>
+
+
+      
+
+
+
+
+
+
+      
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
