--- a/functions.html
+++ b/functions.html
@@ -9,13 +9,20 @@
     <h2>Functions</h2>
 
     <script>
-
+        /*
         function function1() {
             console.log('hello');
             console.log(2+2);
         }
         function1();
         function1();
+        */
+
+        function calculateTax(parameter1){
+            console.log(parameter1 * 0.1);
+        }
+        calculateTax(3000);
+        calculateTax(6000);
 
 
 
