--- a/rock papper scissors functions.html
+++ b/rock papper scissors functions.html
@@ -6,26 +6,6 @@
     <title>Rock Papper Scissors</title>
 </head>
 <body>
-    <p>Rock Papper Scissor - Functions>
-
-
-      
-
-
-
-
-
-
-      
-
-
-
-
-
-
-
-
-
-
+    <P>functions ston papper scirros</P>
 </body>
 </html>
