--- a/weather project.html
+++ b/weather project.html
@@ -14,12 +14,12 @@
 
     <script>
 
-    function convertTemperature(Fahrenheit){
+    function convertToCelsius(Fahrenheit){
     return (Fahrenheit - 32) * 5/9;
 
     }
          
-    function convertTemperature(celsius){
+    function convertToFahrenheit(celsius){
         return (celsius * 9/5) + 32;
     }
 
@@ -35,10 +35,7 @@
           } 
         }
         console.log(convertTemperature(25, 'C'));
-        console,console.log(convertTemperature(86, 'F'));
-
-
-
+        console.log(convertTemperature(86, 'F'));
 
 
 
