--- a/functions.html
+++ b/functions.html
@@ -134,6 +134,20 @@
 
 
 
+        /*Update convertLength to support converting between km, miles, and also feet. Note: 1 mile = 5280 ft, 1 km = 3281 ft (approximately).
+
+        convertLength(5, 'miles', 'km') => '8 km'
+        convertLength(5, 'miles', 'ft') => '26400 ft'
+        convertLength(5, 'km', 'ft') => '16405 ft'             */
+
+        function convertLength()
+
+
+
+
+
+
+
 
         
       
