--- a/functions.html
+++ b/functions.html
@@ -140,7 +140,24 @@
         convertLength(5, 'miles', 'ft') => '26400 ft'
         convertLength(5, 'km', 'ft') => '16405 ft'             */
 
-        function convertLength()
+        function convertLength(length, from ,to){
+            let result;
+            if (from === to){
+                result = length;
+            }else if (from === 'miles' && to === 'km'){
+                result = length * 1.6;
+            }else if (from === 'miles' && to === 'ft'){
+                result = length * 5280;
+            }else if (from === "km" && to === 'ft'){
+                result = length * 3281;
+            }else{
+                return 'invalid';
+            }
+
+        }
+        console.log(convertLength(5, 'miles', 'km'));
+        console.log(convertLength(5, 'miles', 'km'));
+        console.log(convertLength(5, 'miles', 'ft'));
 
 
 
