--- a/functions.html
+++ b/functions.html
@@ -144,17 +144,46 @@
             let result;
             if (from === to){
                 result = length;
+
+            // miles => km //
             }else if (from === 'miles' && to === 'km'){
                 result = length * 1.6;
-            }else if (from === 'miles' && to === 'ft'){
-                result = length * 5280;
-            }else if (from === "km" && to === 'ft'){
+
+            // km => miles //   
+            }else if (from === 'km' && to === 'miles'){
+                result = length / 1.6;
+
+            // miles => ft //
+            }else if (from === "miles" && to === 'ft'){
                 result = length * 3281;
-            }else{
+              
+            // ft => miles //
+
+            }else if (from === 'ft' && to === 'miles'){
+                result = length / 5280;
+
+            // km => ft //
+
+            }else if(from === 'km' && to === 'ft'){
+                result = length * 3281;
+
+            // ft => km //
+
+            }else if(from === 'ft' && to === 'km'){
+                result = length / 3281;
+            }else {
                 return 'invalid';
             }
-
+            return Math.round(result) + ' ' + to
         }
+
+
+
+
+
+
+
+
         console.log(convertLength(5, 'miles', 'km'));
         console.log(convertLength(5, 'miles', 'km'));
         console.log(convertLength(5, 'miles', 'ft'));
