--- a/functions.html
+++ b/functions.html
@@ -329,17 +329,23 @@
     console.log(calculatoin);
    ">=</button>
 
-   <script>
+  <h3>New Code With Calculater Project</3>
 
+    <br>
 
-  /* NEW CODE */
+    <p id="result"></p>
 
-  
-
-
-
-
-   </script>
+    <button onclick="updateCalculation('7')">7</button>
+    <button onclick="updateCalculation('8')">8</button>
+    <button onclick="updateCalculation('9')">9</button>
+    <br>
+    <button onclick="updateCalculation('4')">4</button>
+    <button onclick="updateCalculation('5')">5</button>
+    <button onclick="updateCalculation('6')">6</button>
+    <br>
+    <button onclick="updateCalculation('1')">1</button>
+    <button onclick="updateCalculation('2')">2</button>
+    <button onclick="updateCalculation('3')">3</button>
 
 
     
