--- a/functions.html
+++ b/functions.html
@@ -379,6 +379,26 @@ function clearResult(){
     </script>
 
 
+    <script>
+
+        /*Create a copy of the Cart Quantity project from exercise 6l
+        Create a function 'updateCartQuantity' and reuse the code */
+
+    
+    <button onclick="
+    console.log(`Cart quantity: ${CartQuantity}`);
+    ">Show Quantity</button>
+
+
+
+
+    </script>
+
+
+
+
+
+
 </body>
 </html>
 </html>
