--- a/functions.html
+++ b/functions.html
@@ -379,28 +379,21 @@ function clearResult(){
     </script>
 
 
-    <script>
+    <h3>New Code card Quantity Project.</h3>
 
-        /*Create a copy of the Cart Quantity project from exercise 6l
-        Create a function 'updateCartQuantity' and reuse the code */
-
-    
-    <div>
-        <button onclick="
-        console.log(`Cart quantity: ${CartQuantity}`);
-        ">Show Quantity</button>
-
-        <button onclick="
-        CartQuantity=CartQuantity +1;
-        console.log(`Cart quantity: ${CartQuantity}`);
-        ">Add to Cart</button>
-    </div>
+    <button onclick="updateCardQuantity;">Show Quanity</button>
+    <button onclick="updateCardQuantity(1);">Add to Cart</button>
+    <button onclick="updateCardQuantity(2);">+2</button>
+     <button onclick="updateCardQuantity(3);">+3</button>
 
 
 
 
-    </script>
 
+
+
+
+   
 
 
 
