--- a/objects.html
+++ b/objects.html
@@ -8,7 +8,7 @@
 <body>
    <h1>Objects</h1>
     <script>
-
+       /*
         const product = {
             name: 'Laptop',
             brand: 'Dell',
@@ -27,6 +27,16 @@
 
         product.nweProperty = "google";
         console.log(product);
+        */
+
+
+        const product2 = {
+            name: 'shirt'
+
+        }
+        console.log(product2);
+        console.log(product2.name);
+        console.log(product2['name']);
 
     </script>
 </body>
