--- a/objects.html
+++ b/objects.html
@@ -7,6 +7,8 @@
 </head>
 <body>
    <h1>Objects</h1>
+
+
     <script>
        /*
         const product = {
@@ -17,17 +19,17 @@
         };
         console.log(product);
         console.log(product.name);
-        console.log(product.brand);
+        
         console.log(product.model);
         console.log(product.price);
-
+        console.log(product.brand);
         product.name = 'Smartphone';
         product.brand = 'Apple';
         console.log(product);
 
         product.nweProperty = "google";
         console.log(product);
-        */
+    
 
 
         const product2 = {
@@ -37,6 +39,23 @@
         console.log(product2);
         console.log(product2.name);
         console.log(product2['name']);
+        */
+
+        const product2 = {
+            name: 'shirt',
+            ['deliveryTime']: '2 day'
+        };
+        console.log(product2);
+        console.log(product2.name);
+        console.log(product2['name']);  
+        console.log(product2.deliveryTime);
+
+
+
+
+
+
+
 
     </script>
 </body>
