--- a/objects.html
+++ b/objects.html
@@ -136,7 +136,7 @@
         console.log(cheaperProduct, 'This is the cheaper product');*/
 
         /*Create a function 'isSameProduct (product1, product2)', which returns true if 2 products have the same values inside ('name' and 'price'). 
-        If not, return false. Create 2 products and try out the function. (Hint: objects are references so you can't compare them directly)*/
+        If not, return false. Create 2 products and try out the function. (Hint: objects are references so you can't compare them directly)
 
         function comparePrice(product1, product2){
             return product1.name === product2.name && product1.price === product2.price;
@@ -154,7 +154,18 @@
             name: "puma",
             price: 3000,
         }
-        console.log(comparePrice(ball, bat2));
+        console.log(comparePrice(ball, bat2));*/
+
+
+        /*Using Google or an A.l. tool, search how to convert a string to all lowercase 
+        with JavaScript ('Good Morning' => 'good morning")*/
+
+        const text = "GOOD MORNING";
+        console.log(text);
+        const small = text.toLowerCase();
+        console.log(small);
+
+
         
     </script>
 </body>
