--- a/objects.html
+++ b/objects.html
@@ -158,12 +158,19 @@
 
 
         /*Using Google or an A.l. tool, search how to convert a string to all lowercase 
-        with JavaScript ('Good Morning' => 'good morning")*/
+        with JavaScript ('Good Morning' => 'good morning")
 
         const text = "GOOD MORNING";
         console.log(text);
         const small = text.toLowerCase();
-        console.log(small);
+        console.log(small);*/
+
+        /*Search how to repeat a string many times ('test' 2 times => 'testtest')*/
+
+        const text = "good  morning";
+        console.log(text);
+        const repeated = text. repeat (2);
+        console.log(repeated);
 
 
         
