--- a/objects.html
+++ b/objects.html
@@ -165,12 +165,14 @@
         const small = text.toLowerCase();
         console.log(small);*/
 
-        /*Search how to repeat a string many times ('test' 2 times => 'testtest')*/
+        /*Search how to repeat a string many times ('test' 2 times => 'testtest')
 
         const text = "good  morning";
         console.log(text);
         const repeated = text. repeat (2);
-        console.log(repeated);
+        console.log(repeated);*/
+
+        
 
 
         
