--- a/dom.html
+++ b/dom.html
@@ -9,8 +9,19 @@
     <button>Hello</button>
 
     <script>
+        console.log('documment.title');
+        document.title = 'New Title';
+
+        console.log('document.body.innerHTML');
+        document.body.innerHTML = 'new body content';
+
+
+
+
+         /*
         document.body.innerHTML = 'Hello';
         document.title = 'hello'
+        */
        
     </script>
 </body>
