--- a/dom.html
+++ b/dom.html
@@ -7,15 +7,28 @@
 </head>
 <body>
     <button>Hello</button>
+    <button class ="js-button">Second Button</button>
+
 
     <script>
+        console.log(document.querySelector('button').innerHTML);
+        document.querySelector('button').innerHTML = 'changed';
+
+        const buttonElements = document.querySelector('.js-button');
+        consle.log(buttonElements);
+
+
+
+
+
+
+        /*
         console.log('documment.title');
         document.title = 'New Title';
 
         console.log('document.body.innerHTML');
-        document.body.innerHTML = 'new body content';
-
-
+        document.body.innerHTML = '<button>Click Me</button>';
+        */
 
 
          /*
