--- a/dom-rock-papper-scissor.html
+++ b/dom-rock-papper-scissor.html
@@ -3,19 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Papper Scissors</title>
+    <title>Dom Rock-papper-scissor</title>
 </head>
 <body>
-    <p>Rock Paper Scissors</p>
-
+    <p>DOM Rock papper scssor</p>
     <button onclick="playGame('rock');">Rock</button>
     <button onclick="playGame('paper');">Paper</button>
     <button onclick="playGame('scissors');">Scissors</button>
+
+
+    <p class="js-resut"></p>
+    <p class="js-moves"></p>
+    <p class="js-score"></p>
+
 
     <button onclick="
       score.wins = 0;
       score.losses = 0;
       score.ties = 0;
+        localStorage.setItem('score', JSON.stringify(score));
+
+        updateScoreDisplay();
+
     ">Reset Score</button>
 
     <script>
@@ -24,6 +33,15 @@
         losses: 0,
         ties: 0         
       };
+
+      updateScoreDisplay
+
+
+
+      document.querySelector('.js-score')
+       .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
+
+
 
       function playGame(playerMove){
         const computerMove = pickComputerMove();
@@ -65,9 +83,24 @@
 
         localStorage.setItem('score', JSON.stringify(score));
 
-        alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}
-Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
-      }
+
+
+        updateScoreDisplay();
+
+        document.querySelector('.js-resut').
+        innerHTML = result;
+
+        document.querySelector('.js-moves').innerHTML
+        = `you picked ${playerMove}. Computer picked ${computerMove}.`;
+
+
+    }
+        function updateScoreDisplay() {
+            document.querySelector('.js-score')
+            .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
+        }
+
+
 
       function pickComputerMove() {
         let computerMove = '';
