--- a/dom project.html
+++ b/dom project.html
@@ -10,13 +10,38 @@
     
     <p>YouTube Subscribe Button</p>
 
-    <button  onclick ="
-    subscribe()"
-    class ="js-subscribe-button">
+    <button  onclick =" subscribe()"
+   
+    class ="js-subscribe-button js-cost-input">
     Subscribe
      </button>
-     
+
+     <p>Amazon Shipping Calculator</p>
+     <input placeholder="Cost of order" class="js-cost-input">
+
+     <button onclick="
+     CalculateTotal();
+     ">Calculate</button>
+     <p class="js-total-cost"></p>
+
+
      <script>
+
+        function CalculateTotal(){
+            const inputElement = document.querySelector('.js-cost-input');
+            let cost = Number(inputElement.value);
+            console.log(cost);
+            console.log(typeof cost);
+
+            if (cost < 40) {
+                cost = cost + 10;
+                console.log(cost);
+            }
+
+            document.querySelector('.js-total-cost')
+              .innerHTML = `$${cost}`;
+        }
+
         function subscribe() {
             const buttonElement = document.querySelector('.js-subscribe-button');
              if(buttonElement.innerText === 'Subscribe') {
