--- a/dom project.html
+++ b/dom project.html
@@ -7,51 +7,48 @@
 </head>
 <body>
 
-    
     <p>YouTube Subscribe Button</p>
 
-    <button  onclick =" subscribe()"
-   
-    class ="js-subscribe-button js-cost-input">
-    Subscribe
-     </button>
+    <button onclick="subscribe()" class="js-subscribe-button">
+        Subscribe
+    </button>
 
-     <p>Amazon Shipping Calculator</p>
-     <input placeholder="Cost of order" class="js-cost-input">
+    <p>Amazon Shipping Calculator</p>
 
-     <button onclick="
-     CalculateTotal();
-     ">Calculate</button>
-     <p class="js-total-cost"></p>
+    <input placeholder="Cost Of Order" class="js-cost-input">
+
+    <button onclick="calculateTotal()">
+        Calculate
+    </button>
+
+    <p class="js-total-cost"></p>
 
 
-     <script>
+    <script>
 
-        function CalculateTotal(){
+        function calculateTotal() {
             const inputElement = document.querySelector('.js-cost-input');
             let cost = Number(inputElement.value);
-            console.log(cost);
-            console.log(typeof cost);
 
             if (cost < 40) {
                 cost = cost + 10;
-                console.log(cost);
             }
 
             document.querySelector('.js-total-cost')
-              .innerHTML = `$${cost}`;
+                .innerHTML = `$${cost}`;
         }
 
         function subscribe() {
             const buttonElement = document.querySelector('.js-subscribe-button');
-             if(buttonElement.innerText === 'Subscribe') {
-                    buttonElement.innerHTML = 'Subscribed';
-             } else {
-            buttonElement.innerHTML = 'Subscribe';
-             }
-        }
-     </script>
 
-    
-  </body>
+            if (buttonElement.innerText === 'Subscribe') {
+                buttonElement.innerHTML = 'Subscribed';
+            } else {
+                buttonElement.innerHTML = 'Subscribe';
+            }
+        }
+
+    </script>
+
+</body>
 </html>
