--- a/dom project.html
+++ b/dom project.html
@@ -15,17 +15,26 @@
 
     <p>Amazon Shipping Calculator</p>
 
-    <input placeholder="Cost Of Order" class="js-cost-input">
+    <input placeholder="Cost Of Order" class="js-cost-input" onkeydown="
+     handleCostKeydown();
+    
+    " >
 
     <button onclick="calculateTotal()">
         Calculate
     </button>
-
     <p class="js-total-cost"></p>
-
-
     <script>
+        String(25)
+            console.log('25' - 5);
+            window.document
+            window.console.log('window');
+            function handleCostKeydown(event) {
 
+            if (event.key === 'Enter'){
+                calculateTotal();
+            }
+        }
         function calculateTotal() {
             const inputElement = document.querySelector('.js-cost-input');
             let cost = Number(inputElement.value);
@@ -33,14 +42,12 @@
             if (cost < 40) {
                 cost = cost + 10;
             }
-
             document.querySelector('.js-total-cost')
                 .innerHTML = `$${cost}`;
         }
-
         function subscribe() {
             const buttonElement = document.querySelector('.js-subscribe-button');
-
+            
             if (buttonElement.innerText === 'Subscribe') {
                 buttonElement.innerHTML = 'Subscribed';
             } else {
