--- a/arrays-loops.html
+++ b/arrays-loops.html
@@ -19,6 +19,10 @@
         const mixedArray = [1, 'hello', true, {name : 'socks'},[1, 2]];
         console.log(typeof[1, 2]);
         console.log(myArray.length)
+        myArray.push(200);
+        console.log(myArray);
+        myArray.splice(0,1);
+        console.log(myArray);
 
     </script>
 </body>
