--- a/arrays-loops.html
+++ b/arrays-loops.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        
+        /*
         const myArray = [10, 20, 30]
         console.log(myArray);
         console.log(myArray[0]);
@@ -23,6 +23,27 @@
         console.log(myArray);
         myArray.splice(0,1);
         console.log(myArray);
+        */
+
+        let i = 1;
+        while (i <=5){
+            console.log(i);
+            i++ ;
+        }
+
+        
+        for( let i = 1; i<=5; i++){
+
+            console.log(i);
+        }
+
+
+        let randomNumber = 0;
+        while (randomNumber < 0.5){
+            randomNumber = Math.random();
+        }
+        console.log(randomNumber);
+
 
     </script>
 </body>
