--- a/arrays-loops.html
+++ b/arrays-loops.html
@@ -25,13 +25,15 @@
         console.log(myArray);
         */
 
+        /*
+
         let i = 1;
         while (i <=5){
             console.log(i);
             i++ ;
         }
 
-        
+
         for( let i = 1; i<=5; i++){
 
             console.log(i);
@@ -43,6 +45,17 @@
             randomNumber = Math.random();
         }
         console.log(randomNumber);
+        */
+
+        const todoList = [
+            'make dinner',
+            'wash dishes',
+            'watch youtube'
+        ];
+        for ( let index = 0; index <= todoList.length -1; index++){
+            const value = todoList[index]
+            console.log(value);
+        }
 
 
     </script>
