--- a/arrays-loops.html
+++ b/arrays-loops.html
@@ -52,9 +52,9 @@
             'wash dishes',
             'watch youtube'
         ];
-        for ( let index = 0; index <= todoList.length -1; index++){
-            const value = todoList[index]
-            console.log(value);
+        for ( let index = 0; index < todoList.length ; index++){
+            
+            console.log(index);
         }
 
 
