--- a/todo-list.html
+++ b/todo-list.html
@@ -13,6 +13,8 @@
     addTdo();
     ">Add</button>
 
+    <di class="js-todo-list"></div>
+
     <script src="todo-list.js"></script>
 </body>
 </html>
