--- a/array-loops practice.html
+++ b/array-loops practice.html
@@ -44,7 +44,7 @@
 
             arraySwap(['hi', 'hello', 'good']) => ['good', 'hello', 'hi']*/
 
-            function arraySwap(array){
+            /*function arraySwap(array){
                 const lastIndex = array.length -1;
 
                 const  lastvalue= array[lastIndex];
@@ -56,7 +56,46 @@
                 return array;
             }
             console.log (arraySwap([1, 20, 22, 24, 5]));
-            console.log (arraySwap(['hi', 'hello', 'good']));
+            console.log (arraySwap(['hi', 'hello', 'good']));*/
+
+
+            /* a for loop that counts up from 0 to 10, but
+             counts up by 2 (0, 2, 4, ..., 8, 10) */
+
+             /*for (let i = 0; i<=10; i++){
+                console.log(i);*/
+
+             /*(0, 2, 4, 6, 8, 10)*/
+
+             /*for (let i= 0; i <= 10; i+=2){
+                console.log(i);
+             }*/
+
+
+             /* Create a loop that takes an array of numbers
+              and creates a new array where each number is increased by 1.
+
+             [1, 2, 3] => [2, 3, 4]
+
+             const array = [1,2,3];
+             const result = [];
+
+             for(let i=0 ; i< array.length;i++){
+                result.push(array[i]+1) ;
+             }
+             console.log (result); */
+
+
+             /*function addOne(array){
+                result = [];
+
+                for (let i =0; i < array.length;i++ ){
+                    result.push(array[i]+1);
+                }
+                return result;
+             }
+             console.log(addOne([1,2,3]));
+             console.log(addOne([-2,-1,99]));*/
 
     </script> 
     
