--- a/array-loops practice.html
+++ b/array-loops practice.html
@@ -97,6 +97,29 @@
              console.log(addOne([1,2,3]));
              console.log(addOne([-2,-1,99]));*/
 
+
+
+            /*Create a function addNum(array, num) that takes an array of numbers
+            and returns an array where each number is increased by 'num'.
+
+            addNum([1, 2, 3], 2) => [3, 4, 5]
+
+            addNum([1, 2, 3), 3) => [4, 5, 6]
+
+            addNum([-2, -1, 0, 99], 2) => [0, 1, 2, 101]*/
+
+            function addNum(array,num){
+                const result =[];
+
+                for ( let i=0; i< array.length; i++){
+                result.push(array[i]+num);
+                }
+                return result;
+            }
+            console.log(addNum([1, 2, 3],2));
+            console.log(addNum([1,2,3],3));
+            console.log(addNum([-2,-1,0,99],2));
+
     </script> 
     
 </body>
