--- a/array-loops practice.html
+++ b/array-loops practice.html
@@ -108,7 +108,7 @@
 
             addNum([-2, -1, 0, 99], 2) => [0, 1, 2, 101]*/
 
-            function addNum(array,num){
+            /*function addNum(array,num){
                 const result =[];
 
                 for ( let i=0; i< array.length; i++){
@@ -118,7 +118,27 @@
             }
             console.log(addNum([1, 2, 3],2));
             console.log(addNum([1,2,3],3));
-            console.log(addNum([-2,-1,0,99],2));
+            console.log(addNum([-2,-1,0,99],2));*/
+
+            /*Create a function addArrays(arrayl, array2) that takes 2 arrays of
+            numbers and adds each number in the arrays together.
+
+            addArrays([1, 1, 2], [1, 1, 3]) => [2, 2, 5]
+
+            addArrays([1, 2, 3], [4, 5, 6]) => [5, 7, 9] */
+
+
+            function addArrays(array1, array2){
+                const result = [];
+
+                for (let i =0; i< array1.length;i++){
+                    result.push(array1[i]+array2[i]);
+                }
+                return result;
+            }
+            console.log(addArrays([1, 1, 2], [1, 1, 3]));
+            console.log(addArrays([1, 2, 3], [4, 5, 6]));
+
 
     </script> 
     
