--- a/array-loops practice.html
+++ b/array-loops practice.html
@@ -128,7 +128,7 @@
             addArrays([1, 2, 3], [4, 5, 6]) => [5, 7, 9] */
 
 
-            function addArrays(array1, array2){
+            /*function addArrays(array1, array2){
                 const result = [];
 
                 for (let i =0; i< array1.length;i++){
@@ -137,7 +137,28 @@
                 return result;
             }
             console.log(addArrays([1, 1, 2], [1, 1, 3]));
-            console.log(addArrays([1, 2, 3], [4, 5, 6]));
+            console.log(addArrays([1, 2, 3], [4, 5, 6]));*/
+
+            /*Create a function countPositive(nums) that takes an array of numbers and 
+            returns how many numbers in the array are greater than 0.
+
+            countPositive([1, -3, 5]) => 2
+
+            countPositive([-2, 3, -5, 7, 10]) => 3 */
+
+            function countPositive(nums){
+                let result = 0;
+                 
+                for (let i=0; i < nums.length; i++){
+                    if (nums[i] > 0) {
+                        result++;
+                    }
+                }
+                return result;
+            }
+            console.log(countPositive([1, -3, 5]));
+            console.log(countPositive([-2, 3, -5, 7, 10]));
+
 
 
     </script> 
