--- a/todo-list.html
+++ b/todo-list.html
@@ -8,6 +8,7 @@
 <body>
     <p>Todo List</p>
     <input placeholder="Todo name" class="js-name-input">
+    <input type="date">
 
     <button onclick="
     addTdo();
