--- a/todo-list.html
+++ b/todo-list.html
@@ -8,15 +8,22 @@
 </head>
 <body>
     <p>Todo List</p>
-    <input placeholder="Todo name" class="js-name-input">
-    <input type="date" class="js-due-date-input">
 
-    <button onclick="
-    addTdo();
-    ">Add</button>
+    <div class="todo-input-grid">
 
-    <di class="js-todo-list"></div>
 
+    <input placeholder="Todo name" 
+    class="js-name-input   name-input">
+
+
+    <input type="date" 
+    class="js-due-date-input  due-date-input">
+
+    <button onclick="addTdo();
+    "class="add-todo-button">Add</button>
+    </div>
+
+    <div class="js-todo-list todo-grid"></div>
     <script src="todo-list.js"></script>
 </body>
 </html>
