--- a/array-loops practice.html
+++ b/array-loops practice.html
@@ -310,7 +310,40 @@
                         console.log(remvoveEgg (['egg', 'apple', 'egg', 'egg', 'ham'])); */ 
 
 
-                        
+                       /* In exercise 11t, one problem with .reverse() is that it doesn't create a copy of the array it is reversing. 
+                        It modifies the original array. Update the code so the function does not modify the original array. 
+                        (Hint: use the .slice() method to create a copy of an array's values).
+
+
+                        const foods = ['egg', 'apple', 'egg', 'egg', 'ham'];
+
+                        console.log(removeEgg(foods)) => ['egg', 'apple', 'ham']
+
+                        console.log(foods) => ['egg', 'apple', 'egg', 'egg', 'ham' */
+
+                        const foods = ['egg', 'apple', 'egg', 'egg', 'ham'];
+                        function removeEgg(foods){
+                            const result = [];
+                            const foodsCopy = foods.slice();
+                            const reversedFoods = foodsCopy.reverse();
+                            let eggsRemoved = 0;
+                            for (let i =0; i < reversedFoods.length; i++){
+                                if(reversedFoods[i] === 'egg' && eggsRemoved <2){
+                                    eggsRemoved++;
+                                    continue;
+                                }
+                                result.push(reversedFoods[i]);
+                            }
+                            return result.reverse();
+
+
+                            
+                        }
+                        console.log(removeEgg(foods));
+                        console.log(foods);
+
+
+
 
 
 
