--- a/array-loops practice.html
+++ b/array-loops practice.html
@@ -351,10 +351,10 @@
 
                          1, 2, Fizz, 4, Buzz, Fizz, 7, 8, ... 13, 14, FizzBuzz, 16, 17, .. */
 
-                         for (let i = 1; i <= 20; i++){
+                         /*for (let i = 1; i <= 20; i++){
                             if (i % 3 ===0 && i % 5 ===0){
                                 console.log('FizzBuzz');
-                            }else if(i % 3===0){                                       /* this is a funnny question  !!! */
+                            }else if(i % 3===0){                                       /* this is a funnny question  !!! 
                                 console.log('Fizz');
                             }else if (i % 5==0){
                                 console.log('Buzz');
@@ -362,7 +362,7 @@
                                console.log(i);
                             }
 
-                         }
+                         }*/
 
 
 
