--- a/advanced-functions.html
+++ b/advanced-functions.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-
+        /*
         function greet(){
             console.log("Hello, welcome to advanced functions!");
         }
@@ -38,6 +38,22 @@
         run(function(){
              console.log("hello from callback");
         });
+        */
+       /*
+        setTimeout(function(){
+            console.log("hello after 5 seconds" );
+            console.log("this is printed after 5 seconds")
+        },5000);
+        console.log("this is printed first");
+
+        setInterval(function(){
+            console.log("hello every 5 seconds");
+        },5000);
+        console.log("this is printed first again");
+
+        */
+
+        
 
 
     </script>
