--- a/advanced-functions.html
+++ b/advanced-functions.html
@@ -53,7 +53,15 @@
 
         */
 
-        
+        [
+            'apple',
+            'banana',
+            'cherry'
+
+        ].forEach(function(fruit,index){
+            console.log(index);
+            console.log(fruit);
+        });
 
 
     </script>
