--- a/0.1functions-todo-list.html
+++ b/0.1functions-todo-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
-    <link rel="stylesheet" href="todo-list.css">
+    <link rel="stylesheet" href="0.1functins-todo-list.css">
 </head>
 <body>
     <p>Todo List</p>
@@ -22,8 +22,7 @@
     <button onclick="addTdo();
     "class="add-todo-button">Add</button>
     </div>
-
     <div class="js-todo-list todo-grid"></div>
-    <script src="todo-list.js"></script>
+    <script src="0.1functions-todo-list.js"></script>
 </body>
 </html>
